--- a/01_HTML/09_입력관련태그.html
+++ b/01_HTML/09_입력관련태그.html
@@ -31,7 +31,7 @@
         - placeholder : 입력 상자에 작성될 내용을 설명
     </pre>
     
-    아이디 : <input type="text" sixe="15" maxlength="10" placeholder="아이디 입력">
+    아이디 : <input type="text" size="15" maxlength="10" placeholder="아이디 입력">
 
     <hr>
 
@@ -81,7 +81,7 @@
 
     <h4>type="range"</h4>
     <p>슬라이드 바를 이용해서 숫자 지정(단독 사용 X, JS와 함께 사용)</p>
-    <input type="range" min="0" max="50" max="50" step="10"> 
+    <input type="range" min="0" max="50" step="10"> 
 
     <hr>
     <hr>
